[package]
name = "runfs"
version = "0.1.0"
authors = ["Haozhe Tang 1520799054@qq.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitflags = "1.3.2"
spin = "0.9.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.17"
